--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  rolling_bottom_bar: ^0.2.2
+  flashy_tab_bar2: ^0.0.5
 
 dev_dependencies:
   flutter_test:
