--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  ionicons: ^0.2.2
+  http: ^0.13.5
+  intl: ^0.18.1
   flashy_tab_bar2: ^0.0.5
+  shared_preferences: ^2.1.0
+  flutter_native_splash: ^2.2.19
+  carousel_slider: ^4.2.1
+  fluttertoast: ^8.2.1
+  open_store: ^0.5.0
+  url_launcher: ^6.1.10
+  package_info_plus: ^3.1.2
+  pdf: ^3.10.1
+  path_provider: ^2.0.14
+  upgrader: ^5.0.0
+  flutter_html: ^3.0.0-alpha.6
+  flutter_svg: ^1.1.5
+
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+#  color: "#42a5f5"
+  background_image: "assets/splash/splash_screen.png"
+#  image: "assets/splash/splash_screen.png"
+
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +73,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+#  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,9 +87,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
+    - assets/logo/
+    - assets/splash/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -76,12 +104,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Regular.otf
+          weight: 400
+        - asset: assets/fonts/Montserrat-SemiBold.otf
+          weight: 600
+        - asset: assets/fonts/Montserrat-Bold.otf
+          weight: 700
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
