--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_html: ^3.0.0-alpha.6
   flutter_svg: ^1.1.5
   get: ^4.6.5
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
